adding the javascript and updated the html. will be updating to make it responsive

--- a/jsform.html
+++ b/jsform.html
@@ -15,9 +15,14 @@
 	
 		<form id="form_id" method="post" name="myform">
 			<label>User Name :</label>
-				<input type="text" name="password" id="password" />
-				<input type="button" value="login" id="submit" onclick="validate()"/>
+				<input type="text" name="username" id="username" />
+			<label>Password :</label>
+				<input type="password" name="password" id="password" />
+				<input type="button" value="Login" id="submit" onclick="validate()"/>
 		</form>
+		
+		<span><b class="note">Note : </b>Use the following username and password. <br /><b class="valid">User Name
+		: lovebunny<br />Password : sassy</b></span>
 	</div>
 	</div>
 
