made some changes

--- a/jsform.html
+++ b/jsform.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Login Form Validation</title>
-<link rel="stylesheet" href="style.css">
-<script src="jslogin.js"></script>
+<link rel="stylesheet" href="css/style.css">
+<script src="js/jslogin.js"></script>
 </head>
 
 <body>
