made minor changes

--- a/jsform.html
+++ b/jsform.html
@@ -22,7 +22,7 @@
 		</form>
 		
 		<span><b class="note">Note : </b>Use the following username and password. <br /><b class="valid">User Name
-		: lovebunny<br />Password : sassy</b></span>
+		: temicka2016<br />Password : sassy</b></span>
 	</div>
 	</div>
 
